# IOHK-test-task

./: IOHK-test-task.cabal  README.md  example_local_run.sh  stack.yaml
app/: CmdLine.hs  Main.hs
